--- a/Static/Css/registerPage.css
+++ b/Static/Css/registerPage.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    margin: 0;
+    margin : 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Oswald", serif;
@@ -56,35 +56,7 @@ body {
     color: #000000
 }
 
-.input-box i {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-}
-
-
-.remember-forgot {
-    display: flex;
-    justify-content: space-between;
-    margin: -15px 0 15px;
-}
-
-.remember-forgot label input {
-    accent-color: #fff;
-}
-
-.remember-forgo a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.remember-forgo a:hover {
-    text-decoration: underline;
-}
-
-.login {
+.register {
     width: 100%;
     height: 30px;
     background-color: #ddd9d9;
@@ -101,7 +73,7 @@ body {
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.login:hover {
+.register:hover {
     background-color: transparent;
     border: 2px rgba(233, 223, 223, 0.685);
     color: #fff;
@@ -109,27 +81,20 @@ body {
     margin-top: 20px;
 }
 
-.register-link {
+.login-link {
     font-size: 14px;
     text-align: center;
     margin: 20px 0 2;
 }
 
-.register-link a {
+.login-link a {
     text-decoration: none;
     color: #fff;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 300;
 }
 
-.register-link a:hover {
+.login-link a:hover {
     text-decoration: underline;
 }
 
-
-.logo {
-    display: block;
-    max-width: 350px;
-    margin: 0 auto 20px;
-    object-fit: contain;
-}
