--- a/Static/Css/registerPage.css
+++ b/Static/Css/registerPage.css
@@ -56,15 +56,23 @@ body {
     color: #000000
 }
 
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
 .register {
     width: 100%;
     height: 30px;
-    background-color: #ddd9d9;
+    background-color: #e1c2c2;
     border: none;
     border-radius: 30px;
     cursor: pointer;
     font-size: 15px;
-    color: #f3f4f5;
+    color: #040404;
     font-weight: 200;
     margin-bottom: 30px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
