Adicionada página para criar nova senha(registerPage) e feita a function toggleEye(ocultar e mostrar senha)

--- a/Static/Css/newPasswordPage.css
+++ b/Static/Css/newPasswordPage.css
@@ -64,38 +64,7 @@ body {
     font-size: 20px;
 }
 
-.toggle-eye {
-    position: absolute;
-    right: 0px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-}
-
-.toggle-eye i {
-    font-size: 25px;
-}
-
-.remember-forgot {
-    display: flex;
-    justify-content: space-between;
-    margin: -15px 0 15px;
-}
-
-.remember-forgot label input {
-    accent-color: #fff;
-}
-
-.remember-forgo a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.remember-forgo a:hover {
-    text-decoration: underline;
-}
-
-.login {
+.change {
     width: 100%;
     height: 30px;
     background-color: #e1c2c2;
@@ -112,27 +81,10 @@ body {
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.login:hover {
+.change:hover {
     background-color: transparent;
     border: 2px rgba(233, 223, 223, 0.685);
     color: #fff;
     transition: 0.5s;
     margin-top: 20px;
-}
-
-.register-link {
-    font-size: 14px;
-    text-align: center;
-    margin: 20px 0 2;
-}
-
-.register-link a {
-    text-decoration: none;
-    color: #fff;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 300;
-}
-
-.register-link a:hover {
-    text-decoration: underline;
 }
