--- a/Templates/loginpage.html
+++ b/Templates/loginpage.html
@@ -18,8 +18,8 @@
                 <i class="bx bxs-user"></i>
             </div>
             <div class="input-box">
-                <input placeholder="Senha" type="password">
-                <i class="bx bxs-lock-alt"></i>
+                <input placeholder="Senha" id="password" type="password">
+                <span class="toggle-eye" onclick="toggleEye()"><i id="eye-icon" class="bx bxs-hide"></i></span>
             </div>
             <div class="remember-forgot">
                 <label>
@@ -37,6 +37,8 @@
         </form>
 
     </main>
+
+    <script src="{{ url_for('static', filename='javascript/ShowandHide.js') }}"></script>
 </body>
 
 </html>
