--- a/Templates/registerPage.html
+++ b/Templates/registerPage.html
@@ -26,8 +26,8 @@
                 <i class="bx bxs-user"></i>
             </div>
             <div class="input-box">
-                <input placeholder="Senha" type="password" required>
-                <i class="bx bxs-lock-alt"></i>
+                <input placeholder="Senha" id="password" type="password" required>
+                <span class="toggle-eye" onclick="toggleEye()"><i id="eye-icon" class="bx bxs-hide"></i></span>
             </div>
             <button class="register" type="submit">Registrar</button>
             <div class="login-link">
@@ -35,6 +35,8 @@
             </div>
         </main>
     </form>
+
+    <script src="{{ url_for('static', filename='javascript/ShowandHide.js') }}"></script>
 </body>
 
 </html>
