Adicionada Verificação de confirmação de Senha em newPasswordPage

--- a/Static/Css/newPasswordPage.css
+++ b/Static/Css/newPasswordPage.css
@@ -74,7 +74,7 @@ body {
     font-size: 15px;
     color: #000000;
     font-weight: 200;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
         rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
@@ -87,4 +87,29 @@ body {
     color: #fff;
     transition: 0.5s;
     margin-top: 20px;
+}
+
+.flash-messages {
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.flash.error {
+    color: #770c0e;
+    font-weight: bold;
+}
+
+.flash.success {
+    color: #135723;
+    font-weight: bold;
+}
+
+.back-login {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    display:flex;
+    justify-content: center;
+    text-decoration: none;
+    color: rgb(59, 78, 185);
 }
