--- a/Templates/newPasswordPage.html
+++ b/Templates/newPasswordPage.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nova Senha</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/newPasswordPage.css') }}">
-     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <form method="POST" action="{{ url_for('newpasswordpage') }}">
         <main class="container">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                <div class="flash {{ category }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+            {% endif %}
+            {% endwith %}
             <h1>Nova Senha</h1>
             <div class="input-box">
-                <input type="password" id= "password" name="nova_senha" placeholder="Nova Senha" required>
+                <input type="password" id="password" name="password" placeholder="Nova Senha" required>
                 <span class="toggle-eye" onclick="toggleEye()"><i id="eye-icon" class="bx bxs-hide"></i></span>
             </div>
             <div class="input-box">
-                <input type="password"  id= "password2" placeholder="Confirmar Senha" required>
+                <input type="password" name="confirmPassword" id="password2" placeholder="Confirmar Senha" required>
                 <span class="toggle-eye" onclick="toggleEye2()"><i id="eye-icon2" class="bx bxs-hide"></i></span>
             </div>
             <button class="change" type="submit">Alterar Senha</button>
+            <a class="back-login" href="{{url_for('loginpage')}}">Voltar para o Login</a>
         </main>
     </form>
-     <script src="{{ url_for('static', filename='javascript/ShowandHide.js') }}"></script>
+
+    <script src="{{ url_for('static', filename='javascript/ShowandHide.js') }}"></script>
 </body>
+
 </html>
